--- a/Phincon/Source/View/DummyPokemonCell.xib
+++ b/Phincon/Source/View/DummyPokemonCell.xib
@@ -9,32 +9,46 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DummyPokemonCell" customModule="Phincon" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="DummyPokemonCell" customModule="Phincon" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hsy-1N-9mO">
-                        <rect key="frame" x="20" y="12" width="280" height="21"/>
+                        <rect key="frame" x="87" y="12" width="213" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-pokeballs-48" translatesAutoresizingMaskIntoConstraints="NO" id="eeO-Rd-0SI">
+                        <rect key="frame" x="2" y="2" width="60" height="60"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="QZy-5l-mHt"/>
+                            <constraint firstAttribute="height" constant="60" id="dKK-aJ-dpd"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Hsy-1N-9mO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="2rV-jV-vqB"/>
+                    <constraint firstItem="eeO-Rd-0SI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="9xJ-Gy-fhD"/>
                     <constraint firstItem="Hsy-1N-9mO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="GgL-eP-5Em"/>
+                    <constraint firstItem="eeO-Rd-0SI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="2" id="KzM-lX-XQD"/>
                     <constraint firstAttribute="bottom" secondItem="Hsy-1N-9mO" secondAttribute="bottom" constant="11" id="niT-sk-3ou"/>
+                    <constraint firstItem="Hsy-1N-9mO" firstAttribute="leading" secondItem="eeO-Rd-0SI" secondAttribute="trailing" constant="25" id="pDl-pM-Mqh"/>
                     <constraint firstAttribute="trailing" secondItem="Hsy-1N-9mO" secondAttribute="trailing" constant="20" id="qLi-iU-FOB"/>
+                    <constraint firstAttribute="bottom" secondItem="eeO-Rd-0SI" secondAttribute="bottom" constant="2" id="u25-Bd-rFn"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="imagePokemon" destination="eeO-Rd-0SI" id="P6a-OP-kY1"/>
                 <outlet property="pokemonLabel" destination="Hsy-1N-9mO" id="XsW-ga-OIJ"/>
             </connections>
-            <point key="canvasLocation" x="139" y="92"/>
+            <point key="canvasLocation" x="137.68115942028987" y="102.12053571428571"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="icons8-pokeballs-48" width="24" height="24"/>
+    </resources>
 </document>
